--- a/includes/bootstrap/css/bootstrap-yip.css
+++ b/includes/bootstrap/css/bootstrap-yip.css
@@ -4878,7 +4878,7 @@ a.badge:focus {
 }
 
 .jumbotron {
-  background: url('../../../images/bggz.jpg') no-repeat center;
+  background: url('../../../images/bggz3.jpg') no-repeat center;
   background-size: auto 100%;
   height: 300px;
   padding: 0px 0px;
